--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Home Page"
 title_separator          : "-"
 name                     : &name "Wenxuan Fang"
 description              : &description "Per Aspera Ad Astra"
-url                      : https://Athenaxr.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : "https://Athenaxr.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Athenaxr/athenaxr.github.io"
 
