--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Home Page"
 title_separator          : "-"
 name                     : &name "Wenxuan Fang"
 description              : &description "Per Aspera Ad Astra"
-url                      : https://athenaxr.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : "https://athenaxr.github.io/" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : Athenaxr/athenaxr.github.io
+repository               : "Athenaxr/athenaxr.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -28,7 +28,7 @@ author:
   bio              : "Per Aspera Ad Astra"
   location         : "Switzerland"
   employer         : "EPFL"
-  uri              : # URL
+  uri              : "https://athenaxr.github.io/"
   email            : "athena_xr@163.com" 
 
   # Academic websites
